client/src/pages/Home/home.css
.homecontainer {
  text-align: center;
  width: 100%;
  height: 100%;
  overflow-x: hidden;
  position: absolute;
}

.App-intro {
  font-size: large;
}

#home-logo {
  height: 250px;
  width: 250px;
  
}

#welcome {
  margin-top: 5%;
  
}

#logout {
  float: left;
  color: black;
  
}

#gotoprofile {
  float: right;
  color: black;
  
}

#playnowbtn {
  background-color: #c82d2d;
  border: none;
  color: white;
  margin-left: -7rem;
}

#viewhighbtn {
  background-color: lightskyblue;
  border: none;
  color: white;
  margin-right: 7rem;
  
}

.homebtns {
  margin-top: 25%;
  margin-left: 32%;
  

}

#reminder {
  margin-top: 60%;
  
}

